--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1556,7 +1556,7 @@ function updateXPmult(){
     } else if (challenge==3 || challenge==4){
     mxpmul=(((goals3+1)*(ascXP+1))*(antixp+1))
     } else if (challenge==5) {
-    mxpmul=(((pxpmul*(goals3+1))*(antixp+1))
+    mxpmul=((pxpmul*(goals3+1))*(antixp+1))
     }
     if (mxpmul==0){
     document.getElementById("xpmultiplier").innerText=" x"+mxpmul
