--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3637,7 +3637,7 @@ function loadCookie(){
         if (challenge==2){
         pressesdec+=0
         if (detailedoutput==1){
-        console.log("chal "+challenge+"... no gain. (ppstog is "+ppstog+"))
+        console.log("chal "+challenge+"... no gain. (ppstog is "+ppstog+")")
         }
         } else if (challenge==3 || challenge == 4) {
         pressesdec+=((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(msaway/100)/100)*ppsoffbonus)
