--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3658,7 +3658,7 @@ function loadCookie(){
         }
         } else {
         if (detailedoutput==1){
-        console.log("chal "+challenge+"... no gain. (ppstog is "+ppstog+"))
+        console.log("chal "+challenge+"... no gain. (ppstog is "+ppstog+")")
         }
         }
         if (detailedoutput==1){
