--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3488,6 +3488,7 @@ function loadCookie(){
         document.getElementById("presinfo").style="color: #FFFFFF"
         document.getElementById("ascendgain").style="color: #FFFFFF"
         document.getElementById("ascendinfo").style="color: #FFFFFF"
+        document.getElementById("chalinfo").style="color: #FFFFFF"
     } else if (dimension==0){
         document.body.style="overflow: hidden; background-color: #FFFFFF"
         document.getElementById("chal").style="position: absolute; left: 6px; top: 45px; color: #000000"
@@ -3515,6 +3516,7 @@ function loadCookie(){
         document.getElementById("presinfo").style="color: #000000"
         document.getElementById("ascendgain").style="color: #000000"
         document.getElementById("ascendinfo").style="color: #000000"
+        document.getElementById("chalinfo").style="color: #000000"
     }
         var count0=0
         if (auto>0){
