--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -4557,7 +4557,7 @@ updateXPmult()
 updateShop()
 }
 function buyAnti(){
-ppoint-=1000000
+ppoint-=((1000000)-(goals5*100000))
 cananti=1
 updateShop()
 }
